--- a/hakkımızda.html
+++ b/hakkımızda.html
@@ -9,7 +9,11 @@
             <a href="hakkımızda.html">Hakkımızda</a>
             <a href="iletisim.html">İletişim</a>
         </div>
-        <h1>Milas'ı Sevenler Derneği</h1>
+         <h1>Milas'ı Sevenler Derneği</h1>
+         <a href="index.html">
+            <img src="logo.png" alt="Ana Sayfa"    
+                 style="width:100px;height:99px;">
+          </a>
         <p>
             Milası Sevenler Derneği olarak, Milas’ın kültürel ve doğal güzelliklerini korumak, tanıtmak ve gelecek nesillere aktarmak amacıyla kurulduk. Yerel halkla iş birliği içinde sosyal projeler, çevre koruma çalışmaları ve kültürel etkinlikler düzenleyerek Milas’ın zengin mirasını yaşatmayı hedefliyoruz. Derneğimiz, Milas’a gönül vermiş bireylerden oluşan bir topluluk olarak, şehrimizin değerlerini yaşatmak için çalışıyoruz.
         </p>
