--- a/iletisim.html
+++ b/iletisim.html
@@ -9,6 +9,11 @@
             <a href="hakkımızda.html">Hakkımızda</a>
             <a href="iletisim.html">İletişim</a>
         </div>
+        <h1>Milas'ı Sevenler Derneği</h1>
+        <a href="index.html">
+            <img src="logo.png" alt="Ana Sayfa"    
+                 style="width:100px;height:99px;">
+          </a>
         <ul>
             <li>Telefon Numarası: +90 048 048 4848</li>
             <li>e-mail: milası@sevenler.com</li>
