--- a/iletisim.html
+++ b/iletisim.html
@@ -11,8 +11,7 @@
         </div>
         <h1>Milas'ı Sevenler Derneği</h1>
         <a href="index.html">
-            <img src="logo.png" alt="Ana Sayfa"    
-                 style="width:100px;height:99px;">
+            <img src="logo.png" alt="Ana Sayfa" style="width:100px;height:99px;">
           </a>
         <ul>
             <li>Telefon Numarası: +90 048 048 4848</li>
