--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         </div>
         <h1>Milas'ı Sevenler Derneği</h1>
         <a href="index.html">
-            <img src="logo.png" alt="Ana Sayfa"    
-                 style="width:100px;height:99px;">
+            <img src="logo.png" alt="Ana Sayfa" style="width:100px;height:99px;">
           </a>
         <p>Milas'ın güzelliklerini hep beraber yaşatmaya ne dersiniz?</p>
         <p>Tanıtım Videosu:</p>
